--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <p id="one">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, incidunt?</p>
+    <p id="two">Lorem ipsum dolor sit amet.</p>
+    <p id="three">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+    <p id="four">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+    <span>
+    <p id="five">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, sed.</p>
+    <p id="six">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi, nihil?</p>   
+</span>
 </body>
 </html>
